--- a/pages/coberturas.html
+++ b/pages/coberturas.html
@@ -6,36 +6,81 @@
 	<title>ALPHA-Coberturas</title>
 </head>
 <link rel="shortcut icon" href="../img/favicon.jfif">
+<!--BS CSS-->
+<link rel="stylesheet" href="../css/bootstrap.min.css">
+<!--Mi CSS-->
 <link rel="stylesheet" href="../css/style.css">
 <body>
-	<nav>
-		<div class="botonera">
-		<a href="../index.html">
-		<img id="indice__logo" src="../img/logo.jfif" alt="alpha - alquiler de autos">
-		</a>
-		<ul>
-			<li>
-				<a class="navegacion__seleccion" href="../index.html">INDICE</a>
-			</li>
 
-			<li>
-				<a class="navegacion__seleccion--encendido" href="../pages/coberturas.html">COEBRTURAS</a>
-			</li>
-			<li>
-				<a class="navegacion__seleccion" href="./precios.html">PRECIOS</a>
-			</li>
-			<li>
-				<a class="navegacion__seleccion" href="./flota.html">FLOTA</a>
-			</li>
-			<li>
-				<a class="navegacion__seleccion" href="./nosotros.html">NOSOTROS</a>
-			</li>
-		</ul>
-		</div>
-	</nav>
-	<!--Fin nav-->
+	<!--Inicia NAV-->
+	<nav class="navbar navbar-expand-md navbar-light bg-lightblue">
+  	<div class="container-fluid">
+    <a class="navbar-brand" href="../index.html">
+    	<img id="indice__logo" src="../img/logo.jfif" alt="logo de Alpha">
+    </a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+      	<li class="nav-item">
+          <a class="nav-link" aria-current="page" href="../index.html">Indice</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="../pages/coberturas.html">Coberturas</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="../pages/flota.html">Flota</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="../pages/precios.html">Precios</a>
+        </li>
+         <li class="nav-item">
+          <a class="nav-link" href="../pages/nosotros.html">Nosotros</a>
+        </li>
+      </ul>
+    </div>
+  </div>
+</nav>
+	<!--Finaliza nav-->
+
+	<!--Inicia header-->
 	<header>
-		
+		<!--Inicia Carousel-->
+		<div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
+
+			  <div class="carousel-indicators">
+			    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+			    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+			    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+			  </div>
+
+			  <div class="carousel-inner">
+			    <div class="carousel-item active">
+			      <img src="../img/header.jpg" class="d-block w-100" alt="Llevate tu auto">
+			    </div>
+
+			    <div class="carousel-item">
+			      <img src="../img/header2.jpg" class="d-block w-100" alt="Llevate tu auto">
+			    </div>
+
+			    <div class="carousel-item">
+			      <img src="../img/header3.jpg" class="d-block w-100" alt="Llevate tu auto">
+			    </div>
+
+			  </div>
+
+			  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+			    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+			    <span class="visually-hidden">Previous</span>
+			  </button>
+
+			  <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+			    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+			    <span class="visually-hidden">Next</span>
+			  </button>
+		</div>
+		<!--Finaliza Carousel-->
 	</header>
 	<!--Fin header-->
 	<main>
@@ -104,5 +149,6 @@
 			</div>
 		</div>
 	</footer>
+	<script src="../js/bootstrap.min.js"></script>
 </body>
 </html>
