--- a/pages/flota.html
+++ b/pages/flota.html
@@ -19,25 +19,25 @@
     <a class="navbar-brand" href="../index.html">
     	<img id="indice__logo" src="../img/logo.jfif" alt="logo de Alpha">
     </a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <button class="navbar-toggler btn__color" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
       	<li class="nav-item">
-          <a class="nav-link" aria-current="page" href="../index.html">Indice</a>
+          <a class="animacion__navbar nav-link" aria-current="page" href="../index.html">Indice</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" aria-current="page" href="../pages/coberturas.html">Coberturas</a>
+          <a class="animacion__navbar nav-link" aria-current="page" href="../pages/coberturas.html">Coberturas</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link active" href="../pages/flota.html">Flota</a>
+          <a class="animacion__navbar nav-link" href="../pages/flota.html">Flota</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="../pages/precios.html">Precios</a>
+          <a class="animacion__navbar nav-link" href="../pages/precios.html">Precios</a>
         </li>
          <li class="nav-item">
-          <a class="nav-link" href="../pages/nosotros.html">Nosotros</a>
+          <a class="animacion__navbar nav-link active" href="../pages/nosotros.html">Nosotros</a>
         </li>
       </ul>
     </div>
@@ -90,7 +90,7 @@
 			<section class="flota">
 				<div class="grid__autos">
 							<a class="borde" href="">
-								<figure class="auto1 imagen">
+								<figure class="auto1 imagen__flota">
 								<img src="../img/auto1.jpg" alt="Renault Logan">
 								<figcaption class="auto__pie">Renault Logan</figcaption>
 								</figure>
@@ -98,49 +98,49 @@
 							</a>
 
 							<a class="borde" href="">
-								<figure class="auto2 imagen">
+								<figure class="auto2 imagen__flota">
 								<img src="../img/auto2.png" alt="VW Gol Trend">
 								<figcaption class="auto__pie">VW Gol Trend</figcaption>
 								</figure>
 							</a>
 
 							<a class="borde" href="">
-								<figure class="auto3 imagen">
+								<figure class="auto3 imagen__flota">
 								<img src="../img/auto3.png" alt="Nissan Sentra">
 								<figcaption class="auto__pie">Nissan Sentra</figcaption>
 								</figure>
 							</a>
 
 							<a class="borde" href="">
-							<figure class="cam1 imagen">
+							<figure class="cam1 imagen__flota">
 								<img src="../img/camioneta1.png" alt="Toyota Hilux">
 								<figcaption class="auto__pie">Toyota Hilux</figcaption>
 							</figure>
 							</a>
 
 							<a class="borde" href="">
-								<figure class="cam2 imagen">
+								<figure class="cam2 imagen__flota">
 								<img src="../img/camioneta2.png" alt="Chevrolet Tracker">
 								<figcaption class="auto__pie">Chevrolet Tracker</figcaption>
 								</figure>
 							</a>
 
 							<a class="borde" href="">
-								<figure class="cam3 imagen">
+								<figure class="cam3 imagen__flota">
 								<img src="../img/camioneta3.png" alt="Nissan H1">
 								<figcaption class="auto__pie">Nissan H1</figcaption>
 								</figure>
 							</a>
 
 							<a class="borde" href="">
-								<figure class="moto1 imagen">
+								<figure class="moto1 imagen__flota">
 								<img src="../img/moto1.jpg" alt="Zanella">
 								<figcaption class="auto__pie">Zanella</figcaption>
 								</figure>
 							</a>
 
 							<a class="borde" href="">
-								<figure class="moto2 imagen">
+								<figure class="moto2 imagen__flota">
 								<img src="../img/moto2.png" alt="Scooter">
 								<figcaption class="auto__pie">Honda</figcaption>
 								</figure>
