--- a/index.html
+++ b/index.html
@@ -15,30 +15,31 @@
 <body>
 
 	<!--Inicia NAV-->
+
 	<nav class="navbar navbar-expand-md navbar-light bg-lightblue">
   	<div class="container-fluid">
     <a class="navbar-brand" href="./index.html">
     	<img id="indice__logo" src="./img/logo.jfif" alt="logo de Alpha">
     </a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <button class="navbar-toggler btn__color" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
       	<li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="./index.html">Indice</a>
+          <a class="animacion__navbar nav-link active" aria-current="page" href="./index.html">Indice</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" aria-current="page" href="./pages/coberturas.html">Coberturas</a>
+          <a class="animacion__navbar nav-link" aria-current="page" href="./pages/coberturas.html">Coberturas</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="./pages/flota.html">Flota</a>
+          <a class="animacion__navbar nav-link" href="./pages/flota.html">Flota</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="./pages/precios.html">Precios</a>
+          <a class="animacion__navbar nav-link" href="./pages/precios.html">Precios</a>
         </li>
          <li class="nav-item">
-          <a class="nav-link" href="./pages/nosotros.html">Nosotros</a>
+          <a class="animacion__navbar nav-link" href="./pages/nosotros.html">Nosotros</a>
         </li>
       </ul>
     </div>
