--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -18,25 +18,25 @@
     <a class="navbar-brand" href="../index.html">
     	<img id="indice__logo" src="../img/logo.jfif" alt="logo de Alpha">
     </a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <button class="navbar-toggler btn__color" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
       	<li class="nav-item">
-          <a class="nav-link" aria-current="page" href="../index.html">Indice</a>
+          <a class="animacion__navbar nav-link" aria-current="page" href="../index.html">Indice</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" aria-current="page" href="../pages/coberturas.html">Coberturas</a>
+          <a class="animacion__navbar nav-link" aria-current="page" href="../pages/coberturas.html">Coberturas</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="../pages/flota.html">Flota</a>
+          <a class="animacion__navbar nav-link" href="../pages/flota.html">Flota</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="../pages/precios.html">Precios</a>
+          <a class="animacion__navbar nav-link" href="../pages/precios.html">Precios</a>
         </li>
          <li class="nav-item">
-          <a class="nav-link active" href="../pages/nosotros.html">Nosotros</a>
+          <a class="animacion__navbar nav-link active" href="../pages/nosotros.html">Nosotros</a>
         </li>
       </ul>
     </div>
@@ -88,6 +88,61 @@
 	<main class="nosotros__vacio">
 		<h1>NOSOTROS</h1>
 		<p>Lorem ipsum dolor sit amet, consectetur, adipisicing elit. Laboriosam nostrum aut ex optio doloremque fuga dolores possimus, necessitatibus earum, dolorum placeat pariatur maxime voluptatibus quas voluptatum minima blanditiis ipsam fugiat! Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid debitis vitae incidunt totam minima modi excepturi ipsum cumque aliquam, nulla sint ipsam porro et rem ducimus quasi. Officiis velit, consectetur Lorem ipsum dolor, sit amet consectetur adipisicing elit. Consectetur iure labore delectus aliquam, aliquid? Cum ut dolore modi suscipit numquam saepe aperiam ex! Officia, ut! Voluptatibus aut quaerat voluptas eaque.</p>
+
+		<!--inicia acordeon-->
+
+		<div class="accordion" id="accordionPanelsStayOpenExample">
+			  <div class="accordion-item">
+			    <h3 class="fuente__acordeon accordion-header" id="panelsStayOpen-headingOne">
+			      <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseOne" aria-expanded="true" aria-controls="panelsStayOpen-collapseOne">
+			        <p>FAQ</p>
+			      </button>
+			    </h3>
+			    <div id="panelsStayOpen-collapseOne" class="accordion-collapse collapse show" aria-labelledby="panelsStayOpen-headingOne">
+			      <div class="accordion-body">
+			      <p><code>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus odit soluta quis, voluptatibus assumenda accusantium doloremque voluptate iure magnam neque cum et itaque beatae veritatis non quasi aperiam repellat natus.</code></p>		      
+			      </div>
+			    </div>
+			  </div>
+			  <div class="accordion-item">
+			    <h3 class="fuente__acordeon accordion-header" id="panelsStayOpen-headingTwo">
+			      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseTwo" aria-expanded="false" aria-controls="panelsStayOpen-collapseTwo">
+			        <p>NUESTRA HISTORIA</p>
+			      </button>
+			    </h3>
+			    <div id="panelsStayOpen-collapseTwo" class="accordion-collapse collapse" aria-labelledby="panelsStayOpen-headingTwo">
+			      <div class="accordion-body">
+			        <p><code>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus odit soluta quis, voluptatibus assumenda accusantium doloremque voluptate iure magnam neque cum et itaque beatae veritatis non quasi aperiam repellat natus. Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis sit reprehenderit cupiditate aspernatur voluptatem harum mollitia non in earum quisquam numquam hic alias, architecto quia sed quam totam nostrum iusto? Lorem, ipsum, dolor sit amet consectetur adipisicing elit. Ex, consequatur! Dicta nobis exercitationem aspernatur dignissimos esse, tenetur in, laudantium recusandae quis reiciendis laborum architecto quas animi, quaerat optio nisi porro?</code></p>
+			      </div>
+			    </div>
+			  </div>
+			  <div class="accordion-item">
+			    <h3 class="fuente__acordeon accordion-header" id="panelsStayOpen-headingThree">
+			      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseThree" aria-expanded="false" aria-controls="panelsStayOpen-collapseThree">
+			        <p>NUESTRO OBJETIVO</p>
+			      </button>
+			    </h3>
+			    <div id="panelsStayOpen-collapseThree" class="accordion-collapse collapse" aria-labelledby="panelsStayOpen-headingThree">
+			      <div class="accordion-body">
+			      	<p><code>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus odit soluta quis, voluptatibus assumenda accusantium doloremque voluptate iure magnam neque cum et itaque beatae veritatis non quasi aperiam repellat natus.</code></p>
+			      </div>
+			    </div>
+			  </div>
+			  <div class="accordion-item">
+			    <h3 class="fuente__acordeon accordion-header" id="panelsStayOpen-headingFour">
+			      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseFour" aria-expanded="false" aria-controls="panelsStayOpen-collapseFour">
+			        <p>SUCURSALES</p>
+			      </button>
+			    </h3>
+			    <div id="panelsStayOpen-collapseFour" class="accordion-collapse collapse" aria-labelledby="panelsStayOpen-headingFour">
+			      <div class="accordion-body">
+			      	<p><code>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus odit soluta quis, voluptatibus assumenda accusantium doloremque voluptate iure magnam neque cum et itaque beatae veritatis non quasi aperiam repellat natus.</code></p>
+			      </div>
+			    </div>
+			  </div>
+		</div>
+
+<!--finaliza acordeon-->
 	</main>
 	<footer>
 		<div class="pie__footer">
