--- a/pages/precios.html
+++ b/pages/precios.html
@@ -18,25 +18,25 @@
     <a class="navbar-brand" href="../index.html">
     	<img id="indice__logo" src="../img/logo.jfif" alt="logo de Alpha">
     </a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <button class="navbar-toggler btn__color" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
       	<li class="nav-item">
-          <a class="nav-link" aria-current="page" href="../index.html">Indice</a>
+          <a class="animacion__navbar nav-link" aria-current="page" href="../index.html">Indice</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" aria-current="page" href="../pages/coberturas.html">Coberturas</a>
+          <a class="animacion__navbar nav-link" aria-current="page" href="../pages/coberturas.html">Coberturas</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="../pages/flota.html">Flota</a>
+          <a class="animacion__navbar nav-link" href="../pages/flota.html">Flota</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link active" href="../pages/precios.html">Precios</a>
+          <a class="animacion__navbar nav-link active" href="../pages/precios.html">Precios</a>
         </li>
          <li class="nav-item">
-          <a class="nav-link" href="../pages/nosotros.html">Nosotros</a>
+          <a class="animacion__navbar nav-link" href="../pages/nosotros.html">Nosotros</a>
         </li>
       </ul>
     </div>
@@ -111,6 +111,55 @@
 				</tr>
 			</table>
 		</div>
+
+		<!--inicia acordeon-->
+
+		<div class="accordion" id="accordionPanelsStayOpenExample">
+			  <div class="accordion-item">
+			    <h3 class="fuente__acordeon accordion-header" id="panelsStayOpen-headingOne">
+			      <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseOne" aria-expanded="true" aria-controls="panelsStayOpen-collapseOne">
+			        <p>MEDIOS DE PAGO</p>
+			      </button>
+			    </h3>
+			    <div id="panelsStayOpen-collapseOne" class="accordion-collapse collapse show" aria-labelledby="panelsStayOpen-headingOne">
+			      <div class="accordion-body">
+			      <p><code>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus odit soluta quis, voluptatibus assumenda accusantium doloremque voluptate iure magnam neque cum et itaque beatae veritatis non quasi aperiam repellat natus.</code></p>		      
+			      <div class="logos__pagos"> 
+			     		<img src="../precios/efectivo.png" alt="mastercard"> 
+				      <img src="../precios/masterCard.svg" alt="mastercard">
+				      <img src="../precios/visa.svg" alt="visa">
+				      <img src="../precios/mercadopago.svg" alt="mercado pago">
+			      </div>
+			      </div>
+			    </div>
+			  </div>
+			  <div class="accordion-item">
+			    <h3 class="fuente__acordeon accordion-header" id="panelsStayOpen-headingTwo">
+			      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseTwo" aria-expanded="false" aria-controls="panelsStayOpen-collapseTwo">
+			        <p>¿PUEDO IR A OTRO PAÍS CON UN AUTO ALQUILADO?</p>
+			      </button>
+			    </h3>
+			    <div id="panelsStayOpen-collapseTwo" class="accordion-collapse collapse" aria-labelledby="panelsStayOpen-headingTwo">
+			      <div class="accordion-body">
+			        <p><code>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus odit soluta quis, voluptatibus assumenda accusantium doloremque voluptate iure magnam neque cum et itaque beatae veritatis non quasi aperiam repellat natus.</code></p>
+			      </div>
+			    </div>
+			  </div>
+			  <div class="accordion-item">
+			    <h3 class="fuente__acordeon accordion-header" id="panelsStayOpen-headingThree">
+			      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseThree" aria-expanded="false" aria-controls="panelsStayOpen-collapseThree">
+			        <p>¿QUE PASA SI ME ROBAN O CHOCAN EL AUTO?</p>
+			      </button>
+			    </h3>
+			    <div id="panelsStayOpen-collapseThree" class="accordion-collapse collapse" aria-labelledby="panelsStayOpen-headingThree">
+			      <div class="accordion-body">
+			      	<p><code>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus odit soluta quis, voluptatibus assumenda accusantium doloremque voluptate iure magnam neque cum et itaque beatae veritatis non quasi aperiam repellat natus.</code></p>
+			      </div>
+			    </div>
+			  </div>
+		</div>
+
+<!--finaliza acordeon-->
 	</main>
 	<footer>
 		<div class="pie__footer">
