--- a/pages/flota.html
+++ b/pages/flota.html
@@ -31,13 +31,13 @@
           <a class="animacion__navbar nav-link" aria-current="page" href="../pages/coberturas.html">Coberturas</a>
         </li>
         <li class="nav-item">
-          <a class="animacion__navbar nav-link" href="../pages/flota.html">Flota</a>
+          <a class="animacion__navbar nav-link active" href="../pages/flota.html">Flota</a>
         </li>
         <li class="nav-item">
           <a class="animacion__navbar nav-link" href="../pages/precios.html">Precios</a>
         </li>
          <li class="nav-item">
-          <a class="animacion__navbar nav-link active" href="../pages/nosotros.html">Nosotros</a>
+          <a class="animacion__navbar nav-link " href="../pages/nosotros.html">Nosotros</a>
         </li>
       </ul>
     </div>
