--- a/pages/precios.html
+++ b/pages/precios.html
@@ -126,7 +126,7 @@
 			      <p><code>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus odit soluta quis, voluptatibus assumenda accusantium doloremque voluptate iure magnam neque cum et itaque beatae veritatis non quasi aperiam repellat natus.</code></p>		      
 			      <div class="logos__pagos"> 
 			     		<img src="../precios/efectivo.png" alt="mastercard"> 
-				      <img src="../precios/masterCard.svg" alt="mastercard">
+				      <img src="../precios/mastercard.svg" alt="mastercard">
 				      <img src="../precios/visa.svg" alt="visa">
 				      <img src="../precios/mercadopago.svg" alt="mercado pago">
 			      </div>
