--- a/pages/precios.html
+++ b/pages/precios.html
@@ -125,7 +125,7 @@
 			      <div class="accordion-body">
 			      <p><code>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus odit soluta quis, voluptatibus assumenda accusantium doloremque voluptate iure magnam neque cum et itaque beatae veritatis non quasi aperiam repellat natus.</code></p>		      
 			      <div class="logos__pagos"> 
-			     		<img src="../precios/efectivo.png" alt="mastercard"> 
+			     		<img src="../precios/efectivo.png" alt="efectivo"> 
 				      <img src="../precios/mastercard.svg" alt="mastercard">
 				      <img src="../precios/visa.svg" alt="visa">
 				      <img src="../precios/mercadopago.svg" alt="mercado pago">
