--- a/pages/coberturas.html
+++ b/pages/coberturas.html
@@ -9,7 +9,7 @@
 <!--BS CSS-->
 <link rel="stylesheet" href="../css/bootstrap.min.css">
 <!--Mi CSS-->
-<link rel="stylesheet" href="../css/style.css">
+<link rel="stylesheet" href="../css/main.css">
 <body>
 
 	<!--Inicia NAV-->
@@ -24,19 +24,19 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
       	<li class="nav-item">
-          <a class="animacion__navbar nav-link" aria-current="page" href="../index.html">Indice</a>
+          <a class="animacion__navbar nav-link" aria-current="page" href="../index.html">INDICE</a>
         </li>
         <li class="nav-item">
-          <a class="animacion__navbar nav-link active" aria-current="page" href="../pages/coberturas.html">Coberturas</a>
+          <a class="animacion__navbar nav-link active" aria-current="page" href="../pages/coberturas.html">COBERTURAS</a>
         </li>
         <li class="nav-item">
-          <a class="animacion__navbar nav-link" href="../pages/flota.html">Flota</a>
+          <a class="animacion__navbar nav-link" href="../pages/flota.html">FLOTA</a>
         </li>
         <li class="nav-item">
-          <a class="animacion__navbar nav-link" href="../pages/precios.html">Precios</a>
+          <a class="animacion__navbar nav-link" href="../pages/precios.html">PRECIOS</a>
         </li>
          <li class="nav-item">
-          <a class="animacion__navbar nav-link" href="../pages/nosotros.html">Nosotros</a>
+          <a class="animacion__navbar nav-link" href="../pages/nosotros.html">NOSOTROS</a>
         </li>
       </ul>
     </div>
@@ -45,9 +45,9 @@
 	<!--Finaliza nav-->
 
 	<!--Inicia header-->
-	<header>
+	<header class="header__image">
 		<!--Inicia Carousel-->
-		<div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
+		<div id="carouselExampleIndicators" class="carousel slide col-lg-10" data-bs-ride="carousel">
 
 			  <div class="carousel-indicators">
 			    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
@@ -97,7 +97,7 @@
 					    <path d="M13 6h2l1.5 3l2 4" />
 					    </svg>
 					</p>
-					<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet nobis laudantium nesciunt culpa consequuntur soluta voluptas doloribus beatae harum quia exercitationem officia earum, quod ea quaerat ad distinctio non omnis.</p>
+					<p>Seguro de responsabilidad civil. No cubre daños materiales quedando los mismos a cargo del cliente. Todas las motos cuentan con un botón de emergencia, en caso de solicitar acarreo y no tener forma de comunicarse via telefónica.</p>
 				</div>
 				
 				<div class="coberturas__iconos">
@@ -109,7 +109,7 @@
 					    <path d="M5 17h-2v-6l2 -5h9l4 5h1a2 2 0 0 1 2 2v4h-2m-4 0h-6m-6 -6h15m-6 0v-5" />
 					    </svg>
 					</p>
-					<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet nobis laudantium nesciunt culpa consequuntur soluta voluptas doloribus beatae harum quia exercitationem officia earum, quod ea quaerat ad distinctio non omnis.</p>
+					<p>Seguro contra terceros completo. No cubre rotura de cristales, robo de neumáticos o robo de estéreo. Todos los autos cuentan con un botón de emergencia, en caso de solicitar acarreo y no tener forma de comunicarse via telefónica.</p>
 				</div>
 
 				<div class="coberturas__iconos">
@@ -123,7 +123,7 @@
 	         	 		<polyline points="3 17 3 12 12 12" />
 					    </svg>
 					</p>
-					<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet nobis laudantium nesciunt culpa consequuntur soluta voluptas doloribus beatae harum quia exercitationem officia earum, quod ea quaerat ad distinctio non omnis.</p>
+					<p>Seguro contra todo riesgo. No cubre rotura de cristales, robo de neumáticos o robo de estéreo. Todas las camionetas cuentan con un botón de emergencia, en caso de solicitar acarreo y no tener forma de comunicarse via telefónica.</p>
 				</div>
 			</div>
 		</section>
@@ -133,15 +133,15 @@
 			<div>
 				<p>Seguinos en nuestras redes sociales:</p>
 			</div>
-			<div>
+			<div class="img-footer">
 				<a href="https://facebook.com" target="_blank">
-					<img src="../img/facebook.png" alt="seguinos en facebook">
+					<img class="redesSociales" src="../img/facebook.png" alt="seguinos en facebook">
 				</a>
 					<a href="https://instagram.com" target="_blank">
-					<img src="../img/instagram.jpg" alt="seguinos en instagram">
+					<img src="../img/instagram.png" alt="seguinos en instagram">
 				</a>
 					<a href="https://twitter.com" target="_blank">
-					<img src="../img/twitter.png" alt="seguinos en twitter">
+					<img class="redesSociales" src="../img/twitter.png" alt="seguinos en twitter">
 				</a>
 			</div>
 			<div>
