--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -9,7 +9,7 @@
 <!--BS CSS-->
 <link rel="stylesheet" href="../css/bootstrap.min.css">
 <!--Mi CSS-->
-<link rel="stylesheet" href="../css/style.css">
+<link rel="stylesheet" href="../css/main.css">
 <body>
 
 	<!--Inicia NAV-->
@@ -24,19 +24,19 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
       	<li class="nav-item">
-          <a class="animacion__navbar nav-link" aria-current="page" href="../index.html">Indice</a>
+          <a class="animacion__navbar nav-link" aria-current="page" href="../index.html">INDICE</a>
         </li>
         <li class="nav-item">
-          <a class="animacion__navbar nav-link" aria-current="page" href="../pages/coberturas.html">Coberturas</a>
+          <a class="animacion__navbar nav-link" aria-current="page" href="../pages/coberturas.html">COBERTURAS</a>
         </li>
         <li class="nav-item">
-          <a class="animacion__navbar nav-link" href="../pages/flota.html">Flota</a>
+          <a class="animacion__navbar nav-link" href="../pages/flota.html">FLOTA</a>
         </li>
         <li class="nav-item">
-          <a class="animacion__navbar nav-link" href="../pages/precios.html">Precios</a>
+          <a class="animacion__navbar nav-link" href="../pages/precios.html">PRECIOS</a>
         </li>
          <li class="nav-item">
-          <a class="animacion__navbar nav-link active" href="../pages/nosotros.html">Nosotros</a>
+          <a class="animacion__navbar nav-link active" href="../pages/nosotros.html">NOSOTROS</a>
         </li>
       </ul>
     </div>
@@ -46,9 +46,9 @@
 	<!--Finaliza nav-->
 
 	<!--Inicia header-->
-	<header>
+	<header class="header__image">
 		<!--Inicia Carousel-->
-		<div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
+		<div id="carouselExampleIndicators" class="carousel slide col-lg-10" data-bs-ride="carousel">
 
 			  <div class="carousel-indicators">
 			    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
@@ -87,7 +87,11 @@
 
 	<main class="nosotros__vacio">
 		<h1>NOSOTROS</h1>
-		<p>Lorem ipsum dolor sit amet, consectetur, adipisicing elit. Laboriosam nostrum aut ex optio doloremque fuga dolores possimus, necessitatibus earum, dolorum placeat pariatur maxime voluptatibus quas voluptatum minima blanditiis ipsam fugiat! Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid debitis vitae incidunt totam minima modi excepturi ipsum cumque aliquam, nulla sint ipsam porro et rem ducimus quasi. Officiis velit, consectetur Lorem ipsum dolor, sit amet consectetur adipisicing elit. Consectetur iure labore delectus aliquam, aliquid? Cum ut dolore modi suscipit numquam saepe aperiam ex! Officia, ut! Voluptatibus aut quaerat voluptas eaque.</p>
+		<p>Somos una empresa conformada por 16 empleados, para garantizar la mejor calidad para nuestros vehiculos. Contamos con sector de mecánica,
+			donde revisamos el funcionamiento de nuestra flota, contamos con lavadero, para asegurarnos que recibas tu vehículo en perfectas condiciones,
+			también te entregamos el vehículo con tanque lleno y una grilla con los detalles que pueda tener el vehículo, para garantizar tu tranqulidad.
+			Tu auto, moto o camioneta la podes retitar por la sucursal o podes elegir que te la llevemos a tu casa o trabajo sin cargo.
+		</p>
 
 		<!--inicia acordeon-->
 
@@ -100,8 +104,10 @@
 			    </h3>
 			    <div id="panelsStayOpen-collapseOne" class="accordion-collapse collapse show" aria-labelledby="panelsStayOpen-headingOne">
 			      <div class="accordion-body">
-			      <p><code>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus odit soluta quis, voluptatibus assumenda accusantium doloremque voluptate iure magnam neque cum et itaque beatae veritatis non quasi aperiam repellat natus.</code></p>		      
-			      </div>
+			      <p><code>¿ME COBRAN EL LAVADO? <br> El vehículo deber ser entregado en las consiciones que se entregó, en caso de que detectemos
+					restos de pelo de animal, tierra, cenizas de cigarrillo, basura, etc el lavado queda a cargo del cliente.</code></p>		      
+				  <p><code> <br> ¿Tienen sillas para bebés? <br> Si, las sillas para bebés se solicitan al momento del alquler del vehículo y van sin cargo. </code></p>		      
+				  <p><code> <br> ¿Me cobran las multas? <br> Si, todas las infracciones van a cargo del cliente. </code></p>
 			    </div>
 			  </div>
 			  <div class="accordion-item">
@@ -112,7 +118,8 @@
 			    </h3>
 			    <div id="panelsStayOpen-collapseTwo" class="accordion-collapse collapse" aria-labelledby="panelsStayOpen-headingTwo">
 			      <div class="accordion-body">
-			        <p><code>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus odit soluta quis, voluptatibus assumenda accusantium doloremque voluptate iure magnam neque cum et itaque beatae veritatis non quasi aperiam repellat natus. Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis sit reprehenderit cupiditate aspernatur voluptatem harum mollitia non in earum quisquam numquam hic alias, architecto quia sed quam totam nostrum iusto? Lorem, ipsum, dolor sit amet consectetur adipisicing elit. Ex, consequatur! Dicta nobis exercitationem aspernatur dignissimos esse, tenetur in, laudantium recusandae quis reiciendis laborum architecto quas animi, quaerat optio nisi porro?</code></p>
+			        <p><code>Somos una empresa familiar fundada en 1986, comenzamos con 3 autos los cuales eran los autos de la familia, 
+						a medida que fuimos ganando confianza y reputación, pudimos ampliar nuestra flota, actualmente contamos con 3 sucursales y una flota que supera los 200 vehículos.</code></p>
 			      </div>
 			    </div>
 			  </div>
@@ -124,7 +131,9 @@
 			    </h3>
 			    <div id="panelsStayOpen-collapseThree" class="accordion-collapse collapse" aria-labelledby="panelsStayOpen-headingThree">
 			      <div class="accordion-body">
-			      	<p><code>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus odit soluta quis, voluptatibus assumenda accusantium doloremque voluptate iure magnam neque cum et itaque beatae veritatis non quasi aperiam repellat natus.</code></p>
+			      	<p><code>Nuestro objetivo es dar el mejor servicio a nuestros clientes y fomentar la responsabilidad y el compromiso. Nuestro proyecto es ampliar nuestras sucursales hscia el
+						inerior del país y posteriormente al exterior.
+					</code></p>
 			      </div>
 			    </div>
 			  </div>
@@ -136,7 +145,7 @@
 			    </h3>
 			    <div id="panelsStayOpen-collapseFour" class="accordion-collapse collapse" aria-labelledby="panelsStayOpen-headingFour">
 			      <div class="accordion-body">
-			      	<p><code>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus odit soluta quis, voluptatibus assumenda accusantium doloremque voluptate iure magnam neque cum et itaque beatae veritatis non quasi aperiam repellat natus.</code></p>
+			      	<p><code>Podes encontrarnos en: <br>Rivadavia y 9 de Julio (CABA) <br>  Av. Crovara y Av. San martín (Villa Madero) <br> Av. Hipólito Yrigoyen 1600 (Morón) <br> </code></p>
 			      </div>
 			    </div>
 			  </div>
@@ -149,15 +158,15 @@
 			<div>
 				<p>Seguinos en nuestras redes sociales:</p>
 			</div>
-			<div>
+			<div class="img-footer">
 				<a href="https://facebook.com" target="_blank">
-					<img src="../img/facebook.png" alt="seguinos en facebook">
+					<img class="redesSociales" src="../img/facebook.png" alt="seguinos en facebook">
 				</a>
 					<a href="https://instagram.com" target="_blank">
-					<img src="../img/instagram.jpg" alt="seguinos en instagram">
+					<img src="../img/instagram.png" alt="seguinos en instagram">
 				</a>
 					<a href="https://twitter.com" target="_blank">
-					<img src="../img/twitter.png" alt="seguinos en twitter">
+					<img class="redesSociales" src="../img/twitter.png" alt="seguinos en twitter">
 				</a>
 			</div>
 			<div>
